samples/_failures_safe/1761510044_acd779_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92af40f8.c: In function ‘main’:
./samples/SAFE/__tmp_92af40f8.c:161:17: error: expected expression at end of input
  161 |                 if (
      |                 ^~
./samples/SAFE/__tmp_92af40f8.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92af40f8.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_92af40f8.c:161:17: error: expected declaration or statement at end of input
